--- a/styles.css
+++ b/styles.css
@@ -12,6 +12,9 @@
     color: white;
 }
 .header{
+    display: flex;
+    flex-wrap: nowrap;
+    flex-grow: 4 1 1 1; 
     font-size: 18px;
     
 }
