--- a/styles.css
+++ b/styles.css
@@ -42,7 +42,7 @@
 
 .midtop{
     width: 2000px;
-    background-color: #3882F6;
+    
 }
 .midbot{
     
@@ -63,4 +63,18 @@
 }
 .button:active{
     background-color: #3882F6;
+}
+.linebox{
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: row;
+}
+
+.bluebox{
+    background-color: red;
+    width: 100px;
+    height: 100px;
+    border-color: #3882F6;
+    border-width: 5px;
+    margin: 10px;
 }
