--- a/styles.css
+++ b/styles.css
@@ -7,28 +7,67 @@ body{
     gap: 20px;
   }
 
+
+/* Kode til den øverste del af siden */
+
 .top{
     background-color: #1F2937;
     color: white;
-    width: 2000px;
     max-width: 100%;
-    
 }
+
+/* Kode til header */
+
 .header{
     display: flex;
     flex-wrap: nowrap;
-    font-size: 18px;
+    height: 100px;
 }
+
+.logo{
+    font-size: 24px;
+    font-weight: 900;
+    width: 200px;
+    padding-top: 14px;
+    padding-left: 50px;
+}
+
+.logo:hover{
+    cursor:pointer;
+}
+
+.headerlink{
+    display: flex;
+    font-size: 18px;
+    flex: 1;
+    padding-top: 20px;
+    justify-content: center;
+    margin-left: 100px;
+}
+
+
+
+.headerlinkbox{
+    padding-left: 50px;
+}
+
+.headerlink:hover{
+    cursor:pointer;
+}
+
+/* Kode til tekst og billede under header */
 
 .underheader{
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
 }
 
 
 .topleft{
     padding: 10px;
+    max-width: 500px;
 }
 
 .awtext{
@@ -37,37 +76,20 @@ body{
     flex-wrap: wrap;
 }
 
-.logo{
-    font-weight: 900;
-    width: 200px;
-    padding: 50px;
-}
 
-
-.headerlink{
-    display: flex;
-    flex: 1;
-    width: 100px;
-    padding: 50px;
-    justify-content: space-evenly;
-}
-
-.midtop{
-    width: 2000px;
-    
-}
-.midbot{
-    
-    background-color: #E5E7EB;
-    width: 2000px;
-
-
+.smtext{
+    font-size: 18px;
+    color: #E5E7EB
 }
 
 .button{
     background-color: #3882F6;
     border: none;
-    border-radius: 15px;
+    color: white;
+    border-radius: 7px;
+    padding: 6px 30px 6px 30px;
+    font-weight: 600;
+    margin-top: 15px;
 }
 
 .button:hover{
@@ -77,17 +99,39 @@ body{
 .button:active{
     background-color: #3882F6;
 }
+
+
+/* Kode til miderste del med blå bokse */
+.midtop{
+    width: 2000px;
+    
+}
+
 .linebox{
     display: flex;
-    justify-content: space-evenly;
-    flex-direction: row;
+    align-items: center;
+    
 }
 
 .bluebox{
-    background-color: red;
+    flex-direction: row;
+    border: solid;
     width: 100px;
     height: 100px;
     border-color: #3882F6;
-    border-width: 5px;
+    border-width: 3px;
+    border-radius: 7px;
     margin: 10px;
 }
+
+
+
+.midbot{
+    
+    background-color: #E5E7EB;
+    width: 2000px;
+
+
+}
+
+
