--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ body{
     background-color: #1F2937;
     color: white;
     width: auto;
-    padding: 10px 5%;
+    padding: 15px 12%;
     
 }
 
@@ -51,7 +51,7 @@ body{
 .headerlinkbox{
     height: min-content;
     
-    margin-left: 40px;
+    margin-left: 100px;
     flex-basis: auto;
     
 }
@@ -65,6 +65,7 @@ body{
 
 .underheader{
     display: flex;
+    justify-content: center;
     align-items: center;
     flex-wrap: wrap;
     margin-bottom: 100px;
@@ -73,6 +74,16 @@ body{
 
 .topleft{
     max-width: 500px;
+    margin-right: 40px;
+
+}
+
+
+
+
+.dog{
+    object-fit: contain;
+    width: 400px;
 }
 
 .awtext{
@@ -110,7 +121,7 @@ body{
 /* Kode til miderste del med blå bokse */
 .midtop{
     width: auto;
-    padding: 10px 5%;
+    padding: 15px 12%;
     
     
 }
@@ -119,37 +130,129 @@ body{
 .boxtitle{
     display: flex;
     justify-content: center;
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    margin-bottom: 40px;
 }
 
 .linebox{
     display: flex;
     align-items: center;
-    
+    justify-content: space-evenly;
+    /* margin: 0px 50px 0px 50px; */
 }
 
 .bluebox{
     flex-direction: row;
+    flex-shrink: 0;
     border: solid;
-    width: 100px;
-    height: 100px;
+    width: 150px;
+    height: 150px;
     border-color: #3882F6;
-    border-width: 3px;
-    border-radius: 7px;
+    border-width: 4px;
+    border-radius: 17px;
     margin: 10px;
 }
 
+.coltext{
+    display: flex;
+    justify-content: space-between;
+}
 
+.subtext{
+    margin-left: 15px;
+    width: 150px;
+    color: #536073;
+}
+
+/* Citat */
 
 .midbot{
     width: auto;
-    padding: 10px 5%;
+    padding: 15px 12%;
     background-color: #E5E7EB;
-    width: 2000px;
-
-
+    width: auto;
 }
+
+.quotebox{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 100px;
+}
+
+.quote{
+    font-size: 36px;
+    font-style: italic;
+    color: #1F2937;
+    width: 500px;
+}
+
+.quotee{
+    font-size: 18px;
+    color: #1F2937;
+    margin-left: 400px;
+}
+
 
 .bottom{
     width: auto;
-    padding: 10px 5%;
+    padding: 15px 12%;
+    display: flex;
+    justify-content: center;
 }
+
+.bbb{
+    background-color: #3882F6;
+    height: 200px;
+    width: auto;
+    display: flex;
+    padding: 30px 10px 30px 10px;
+}
+
+
+.textcard{
+    display: flex;
+    flex-direction: column;
+}
+
+.text{
+    display: flex;
+}
+
+
+.call{
+    color: white;
+    font-size: 24px;
+    font-weight: 900;
+}
+
+.subcall{
+    font-size: 18px;
+    color: white;
+}
+
+
+.button2{
+    background-color: #3882F6;
+    border: solid;
+    border-color: white;
+    border-width: 1px;
+    color: white;
+    border-radius: 7px;
+    padding: 6px 30px 6px 30px;
+    font-weight: 600;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+
+.button:hover{
+    background-color: #235ebc;
+    cursor:pointer;
+}
+.button:active{
+    background-color: #3882F6;
+}  
+
