--- a/styles.css
+++ b/styles.css
@@ -206,7 +206,7 @@ body{
 
 .bbb{
     background-color: #3882F6;
-    height: 200px;
+    border-radius: 15px;
     width: auto;
     display: flex;
     padding: 30px 10px 30px 10px;
@@ -216,6 +216,7 @@ body{
 .textcard{
     display: flex;
     flex-direction: column;
+    margin: 20px 70px 20px 80px;
 }
 
 .text{
@@ -236,23 +237,27 @@ body{
 
 
 .button2{
+    
     background-color: #3882F6;
     border: solid;
     border-color: white;
     border-width: 1px;
     color: white;
     border-radius: 7px;
+    height: auto;
     padding: 6px 30px 6px 30px;
     font-weight: 600;
     margin-top: 15px;
     margin-bottom: 15px;
+    
 }
 
-.button:hover{
+.button2:hover{
     background-color: #235ebc;
     cursor:pointer;
+    
 }
-.button:active{
+.button2:active{
     background-color: #3882F6;
 }  
 
