--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,6 @@ body{
 
 
 .top{
-    
     background-color: #1F2937;
     color: white;
     width: auto;
@@ -74,6 +73,9 @@ body{
 
 
 .topleft{
+    display: flex;
+    flex-direction: column;
+    flex: 1;
     max-width: 500px;
     margin-right: 40px;
 
@@ -83,20 +85,23 @@ body{
 
 
 .dog{
-    object-fit: contain;
+    
     width: 500px;
 }
 
 .awtext{
+    
     font-size: 48px;
     font-weight: 900;
-    flex-wrap: wrap;
+    text-wrap: pretty;
 }
 
 
 .smtext{
+    
     font-size: 18px;
-    color: #E5E7EB
+    color: #E5E7EB;
+    text-wrap: pretty;
 }
 
 .button{
